@@ -7,8 +7,8 @@
     <epp:phrase id="mail_sig">
 <hr/>
 <p><epc:phrase ref="archive_name" /><br/>
-<epc:print expr="$config{frontpage}" /><br/>
-<epc:print expr="$config{adminemail}" />
+<a href="{$config{frontpage}}"><epc:print expr="$config{frontpage}" /></a><br/>
+<a href="mailto:{$config{adminemail}}"><epc:print expr="$config{adminemail}" /></a>
 </p>
     </epp:phrase>
 
