@@ -103,7 +103,7 @@ sub render
 		id => "ep_mail_reason_edit",
 		class => "ep_no_js",
 		name => "reason",
-		rows => 10,
+		rows => 5,
 		cols => 60,
 		wrap => "virtual" );
 	$textarea->appendChild( $self->{session}->html_phrase( "mail_bounce_reason" ) ); 
@@ -185,14 +185,9 @@ sub action_send
 		reason => $self->{session}->make_text( 
 			$self->{session}->param( "reason" ) ) );
 
-	$mail->appendChild(
-		$self->{session}->html_phrase(
-			"mail_body",
-			content => $content ) );
-
 	my $mail_ok = $user->mail(
 		"cgi/users/edit_eprint:subject_bounce",
-		$mail,
+		$content,
 		$self->{session}->current_user );
 	
 	if( !$mail_ok ) 
